# FEWS

./: .gitignore  README.md  pyproject.toml
data/: heart_rate_membership_functions.csv  inspired_oxygen_concentration_membership_functions.csv  oxygen_saturation_membership_functions.csv  respiratory_rate_membership_functions.csv  supplementary_oxygen_lmin_membership_functions.csv  systolic_blood_pressure_membership_functions.csv  temperature_membership_functions.csv
src/fews/: __init__.py
src/fews/cli/: main.py
src/fews/config/: __init__.py  data_config.py  settings.py
src/fews/domain/: __init__.py  membership_functions.py  models.py
src/fews/engine/: __init__.py  defuzzifier.py  fuzzifier.py  temporal.py
src/fews/ingestion/: __init__.py  parser.py
